# bns-launcher

./: LICENSE  README.md  build.bat  dev.bat
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: styles.css
src/js/: script.js
